metadata-sfdx/force-app/main/default/objects/IncidentInsuranceClaim__c/IncidentInsuranceClaim__c.object-meta.xml
<CustomObject>
    <label>Incident Insurance Claim</label>
    <nameField>
        <displayFormat>INS-{00000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Insurance Claim</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>