metadata-sfdx/force-app/main/default/objects/IncidentInsuranceClaim__c/fields/CheckImage__c.field-meta.xml
<CustomField>
    <fullName>CheckImage__c</fullName>
    <label>Check Image</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>