metadata-sfdx/force-app/main/default/objects/IncidentInsuranceClaim__c/fields/DatePaid__c.field-meta.xml
<CustomField>
    <fullName>DatePaid__c</fullName>
    <description>The date the invoice was paid.</description>
    <label>Date Paid</label>
    <type>Date</type>
</CustomField>