metadata-sfdx/force-app/main/default/objects/IncidentInsuranceClaim__c/fields/IncidentAction__c.field-meta.xml
<CustomField>
    <fullName>IncidentAction__c</fullName>
    <description>Lookup to the Incident Action that represents the guarantee review.</description>
    <label>Incident Action</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MIIncidentAction__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Guarantee</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MIIncidentAction__c</referenceTo>
    <relationshipName>IncidentInsuranceInvoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>