metadata-sfdx/force-app/main/default/objects/IncidentInsuranceClaim__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <description>The number of the invoice received (from Crawford)</description>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>