metadata-sfdx/force-app/main/default/objects/IncidentInsuranceClaim__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Paid</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Recieved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>