metadata-sfdx/force-app/main/default/objects/IncidentInsuranceClaim__c/recordTypes/AdjusterInvoice.recordType-meta.xml
<RecordType>
    <fullName>AdjusterInvoice</fullName>
    <active>true</active>
    <description>Record type used to manage the invoices received for insurance adjustment activities.</description>
    <label>Adjuster Invoice</label>
</RecordType>