metadata-sfdx/force-app/main/default/objects/IncidentInsuranceClaim__c/recordTypes/ApolloPayment.recordType-meta.xml
<RecordType>
    <fullName>ApolloPayment</fullName>
    <active>true</active>
    <description>Record type used to manage the payments received from Apollo.</description>
    <label>Apollo Payment</label>
</RecordType>